# rgbd_deformable_tracking

./: CMakeLists.txt  README.md
cloth/: read_h5py_test.py  record_rgbd_and_T.py
cloth/cloth/: bag2hdf5.py
cmake/: boost-python.cmake
ext/cloudproc/: CMakeLists.txt  CMakeLists_mod.txt  cloudproc.cpp  cloudprocpy.cpp  mesh_simplification.cpp  vtkQuadricDecimation2.h
scripts/: tracker.py
src/: CMakeLists.txt
trackingpy/: clouds.py
